# python-project-lvl1

./: .Makefile.swp  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: lint-test.yml
brain_games/: cli.py  common_logic.py  game_calc.py  game_gcd.py  game_prime.py  game_progression.py  logic.py
brain_games/games/: game_calc.py  game_even.py  game_gcd.py  game_prime.py  game_progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  common_logic.py
