[tool.poetry]

name = "hexlet-code"
version = "0.1.0"
description = "First project, 5 brain-games based on mathematical tasks"
authors = ["Ilya Evchik <elcric66@gmail.com>"]
repository = "https://github.com/SaltyFingers/python-project-lvl1"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Topic :: Games/Entertainment"
]
packages = [
{ include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
pytest = "^6.2.4"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
